--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,9 @@ tokio-native-tls = "0.3"
 futures-util = "0.3"
 native-tls = "0.2"
 rand = "*"
+regex = "*"
+validator = "*"
+lettre = "0.11"
+chrono = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
